Defer font loading
https://web.dev/defer-non-critical-css/#optimize

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Julee&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
   </head>
   <body>
